# cognizantaimlapr2026

day10/: README.md  pyproject.toml
day10/ecommerce_crud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day10/src/ecommerce/: main.py
day10/src/ecommerce/configurations/: conf.py  mysql_conn.py
day10/src/ecommerce/controller/: catalog_controller.py  customer_controller.py  product_controller.py
day10/src/ecommerce/dtos/: catalog_request.py  catalog_response.py  customer_request.py  customer_response.py  full_name_request.py  product_request.py  product_response.py
day10/src/ecommerce/models/: catalog.py  customer.py  full_name.py  product.py
day10/src/ecommerce/repository/: catalog_repository.py  catalog_repository_impl.py  customer_repository.py  customer_repository_impl.py  product_repository.py  product_repository_impl.py
day10/src/ecommerce/services/: catalog_service.py  catalog_service_impl.py  customer_service.py  customer_service_impl.py  product_service.py  product_service_impl.py
day10/src/ecommerce_crud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day10/tests/: test_database_conn.py
day2/: pyproject.toml
day2/docs/source/: conf.py  index.rst  start.rst
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  start.py
day2/src/model/: customer.py
day2/src/store/: customerstore.py
day2/src/view/: customerview.py
day3/: healthcaretestreport.html  pyproject.toml
day3/Healthcare.egg-info/: PKG-INFO
day3/conf/: logger_conf.py
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt
day3/src/exceptions/: doctor_not_found_exception.py  patient_not_found_exception.py
day3/src/models/: appointment.py  doctor.py  patient.py  person.py  role.py  (+1 more)
day3/tests/: doctors.csv  patients.csv
day5/: .env  pyproject.toml
day5/day5evn/: pyvenv.cfg
day5/src/banking_project.egg-info/: SOURCES.txt  requires.txt
day5/src/configurations/: config.py
day5/src/dataloaders/: customer_csv_data_loader.py  customer_data_loader.py  customer_json_data_loader.py  customer_txt_data_loader.py
day5/src/exceptions/: customer_not_found.py
day5/src/models/: address.py  company_type.py  corporate.py  customer.py  full_name.py  gender.py  individual.py
day5/src/resources/: customers.csv  customers.json  customers.txt
day5/src/stores/: customer_store.py  customer_store_implementation.py
day5/src/utils/: main.py  pipeline_runner.py
day6/: .env  pyproject.toml
day6/src/asyncio_dashboard.egg-info/: SOURCES.txt  requires.txt
day6/src/configurations/: conf.py
day6/src/utils/: clock.py  main.py
homeassign1/: pyproject.toml
homeassign1/healthcare.egg-info/: PKG-INFO  top_level.txt
homeassign1/homeassign1/: pyvenv.cfg
homeassign1/src/: app.py
homeassign1/src/model/: doctor.py  patient.py
homeassign1/src/store/: doctor_store.py  patient_doctor_map.py  patient_store.py
homeassign1/src/view/: patient_view.py
homeassign2/: pyproject.toml
homeassign2/BankingSystem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
homeassign2/homeassign2/: pyvenv.cfg
homeassign2/src/models/: Account.py  Corporate.py  CurrentAccount.py  Customer.py  DirectDebit.py  ExternalTransaction.py  Individual.py  Menu.py  SavingAccount.py  Transaction.py
(+10 files in other folders)
