# configure toml file

[project]
name = "ecommerce-crud"
version = "0.0.1"
description = "A cli-based crud application"
authors = [
    { name = "Salmaan", email = "salman@abc.com"}
]
readme = "README.md"
requires-python = ">3.10"

dependencies = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.0",
    "cryptography>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=0.19.0",
    "aiomysql>=0.0.21",
    "asyncio>=3.4.3",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=23.3.0",
    "isort>=5.10.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line = 88
target-version = ['py313']

[tool.isort]
profile = "black"