# configure toml file

[project]
name = "asyncio-dashboard"
version = "0.0.1"
description = "A dashboard for monitoring asyncio application"
authors = [
    { name = "Salmaan", email = "salman@abc.com"}
]
readme = "README.md"
requires-python = ">3.10"

dependencies = [
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "faker>=18.0.0",
    "pandas>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.0",
    "psutil>=5.9.0",
    "websockets>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=23.3.0",
    "isort>=5.10.1",
]

#[build-system]
#requires = ["setuptools>=61.0]

[tool.black]
line = 88
target-version = ['py313']