#configuration toml file
[project]
name = "healthcare"
version = "0.0.1"
description = "A health care system patients and doctors"
readme = "README.md"
authors = [
    { name = "Salmaan", email = "salman@abc.com"}
]
requires-python = ">3.8"

#production dependencies
dependencies = [
    "faker>=13.3.4"
]

#development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.10.1",
    "sphinx>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py313']