#configuring toml

[project]
name = "BankingSystem"
version = "0.0.1"
description = "A simple banking system"
readme = "README.md"
authors = [
    { name = "Salmaan", email = "salman@gmail.com"}
]
requires-python = ">3.8"

#production-dependencies
dependencies = []

#development-dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0"
]

[tool.black]
line-length = 88
target-version = ['py313']